--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,67 @@
-version: '3.3'
-services:
+# version: '3.3'
+# services:
 
+#   frontend:
+#     build:
+#       context: ../frontend
+#       dockerfile: Dockerfile
+#     volumes:
+#       - ../frontend/:/app/result_build/
+
+#   backend:
+#     build:
+#       context: ../backend
+#       dockerfile: Dockerfile
+#     volumes:
+#       - ../backend/:/app/result_build/
+#   nginx:
+#     image: nginx:1.19.3
+#     ports:
+#       - "80:80"
+#     volumes:
+#       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#       - ../frontend/build:/usr/share/nginx/html/
+#       - ../docs/:/usr/share/nginx/html/api/docs/
+version: '3.9'
+
+services:
+  db:
+    image: postgres:15.0-alpine
+    env_file: ./.env
+    volumes:
+      - db:/var/lib/postgresql/data/  
+  backend:
+    build: ../backend/
+    env_file: ./.env
+    volumes:
+      #- static:/static
+      - static:/app/static/
+      - media:/app/media/
+    depends_on:
+      - db
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    build: ../frontend/
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.22.1-alpine-slim
     ports:
+      - "7000:80"
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static:/var/html/static/
+      - media:/var/html/media/
+    depends_on:
+      - backend
+      - frontend
+    restart: always
+
+volumes:
+  db:
+  static:
+  media:
