--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,42 @@
 server {
     listen 80;
+        
+
+    location /media/ {
+        root /var/html/;
+    }
+
+
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+
+
+    location /admin/ {
+        proxy_pass http://backend:7000/admin/;
+    }
+
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:7000;
+    }
+    
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,5 +50,6 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
 
 }
