--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,56 +1,30 @@
 server {
     listen 80;
-    server_tokens off;
-        
-
-    location /media/ {
-        root /var/html/;
-    }
-
-
-    location /static/admin/ {
-        root /var/html/;
-    }
-
-
-    location /static/rest_framework/ {
-        root /var/html/;
-    }
-
+    index index.html;
 
     location /admin/ {
-        proxy_pass http://backend:7000/admin/;
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
     }
-
-
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
-
-
     location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/;
+    }
+    location /media/ {
+        root /;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend:7000;
+        proxy_pass http://backend:8000;
     }
-    
-
     location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
+        alias /staticfiles/;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8000;
       }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
-
-
 }
